@@ -1364,6 +1364,7 @@ define_mpn(popcount)
 define_mpn(preinv_divrem_1)
 define_mpn(preinv_mod_1)
 define_mpn(nand_n)
+define_mpn(neg_n)
 define_mpn(nior_n)
 define_mpn(powm)
 define_mpn(powlo)
